--- a/index.html
+++ b/index.html
@@ -6,48 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Password Generator</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
     <div class="container">
-        <h1> Generate a<br><span>Password</span> </h1>
-        <div class="dislplay">
+        <h1>Generate a<br><span>Password</span></h1>
+        <div class="display">
             <input type="text" id="password" placeholder="Password">
-            <img src="1621635.png" id="copyIcon">
+            <img src="1621635.png" id="copyIcon" alt="Copy Icon">
         </div>
-        <button onclick="createPassword()">Generate password</button>
+        <button onclick="createPassword()"><span>Generate password</span></button>
     </div>
-
-    <script>
-        const passwordBox = document.getElementById("password");
-        const length = 12;
-
-        const upperCase = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
-        const lowerCase = "abcdefghijklmnopqrstuvwxyz";
-        const number = "0123456789";
-        const symbol = "!@#$%^&*()_-+=[]{}|;:./<>?";
-        const allChars = upperCase + lowerCase + number + symbol;
-
-        function createPassword() {
-            let password = "";
-            password += upperCase[Math.floor(Math.random() * upperCase.length)];
-            password += lowerCase[Math.floor(Math.random() * lowerCase.length)];
-            password += number[Math.floor(Math.random() * number.length)];
-            password += symbol[Math.floor(Math.random() * symbol.length)];
-
-            while (length > password.length) {
-                password += allChars[Math.floor(Math.random() * allChars.length)];
-            }
-
-            passwordBox.value = password;
-        }
-
-        const copyIcon = document.getElementById("copyIcon");
-        copyIcon.addEventListener("click", function () {
-            passwordBox.select();
-            document.execCommand("copy");
-        });
-    </script>
 </body>
 
 </html>
